# akirs-auto

./: .env.example  .gitignore  00_START_HERE.md  API_KEYS.md  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  NAVIGATION_GUIDE.md  QUICKSTART.md  README.md  RUNNING.md  Workflow.md  akirs.db  akirs.db.bak-before-nigeria-geography  alembic.ini  config.py  docker-compose.yml  dump.rdb  examples_config.py  main.py  package-lock.json  pyproject.toml  session1.md  status.md  test.html  test_fb.py  test_unaco.py
UserInterface/: README.md  index.html
UserInterface/css/: styles.css
UserInterface/js/: api.js  app.js  chat.js  embed.js
alembic/: env.py
alembic/versions/: 95b2cac7b7c9_rename_password_hash_to_password_add_.py  a1b2c3d4e5f6_seed_akwa_ibom_geography.py  c9c255460452_add_warehouse_vote_table.py  d34700f943d2_add_embed_keys_table.py  d4f7a1b2c3e8_add_taxable_entities_table.py  e39c96d4d538_initial_schema.py  f2a7c8d9e0b1_seed_nigeria_geography.py
backend/: admin.py  database.py  main.py  security.py
backend/models/: __init__.py  embed.py  scraped.py  users.py
backend/routers/: auth.py  embed_keys.py  scraped.py  (+1 more)
chatbot/: README.md  __init__.py  __main__.py  asgi.py  cli.py  config.py
models/: __init__.py
pages/: __init__.py  facebook_ads_page.py
services/: __init__.py  ad_scraper.py  csv_export.py
src/: __init__.py
tests/: conftest.py  test_chatbot_connector.py  test_chatbot_nlp.py  test_chatbot_ollama.py  test_chatbot_pipeline.py  test_chatbot_retriever.py  test_exporter.py  test_keywords.py  test_recon.py  test_repositories.py
(+107 files in other folders)
