[project]
name = "akirs-auto"
version = "0.2.0"
description = "Revenue House Internal Tool for Automations — Akwa Ibom business intelligence scraper + recon"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.59.0",
    "watchdog>=6.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
chatbot = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.7.0",
    "rapidfuzz>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.fastapi]
entrypoint = "backend.main:app"
